--- a/SilentRevolution/Base.lproj/Main.storyboard
+++ b/SilentRevolution/Base.lproj/Main.storyboard
@@ -10,9 +10,6 @@
             <string>JuraMedium</string>
             <string>JuraMedium</string>
             <string>JuraMedium</string>
-            <string>JuraMedium</string>
-            <string>JuraMedium</string>
-            <string>JuraMedium</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -220,10 +217,10 @@
             </objects>
             <point key="canvasLocation" x="2765" y="-104"/>
         </scene>
-        <!--Vote View Controller-->
+        <!--DJVote View Controller-->
         <scene sceneID="zu4-BV-3zv">
             <objects>
-                <viewController id="CrE-v1-FpV" customClass="DJVoteViewController" sceneMemberID="viewController">
+                <viewController id="CrE-v1-FpV" userLabel="DJVote View Controller" customClass="DJVoteViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="8Jf-3V-83K"/>
                         <viewControllerLayoutGuide type="bottom" id="eVA-Fw-EeR"/>
@@ -232,75 +229,54 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fUo-DL-uh8">
-                                <rect key="frame" x="200" y="141" width="200" height="30"/>
-                                <color key="backgroundColor" red="0.51764705879999995" green="0.68235294120000001" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="In2-Bz-e0l"/>
-                                    <constraint firstAttribute="height" constant="30" id="no7-O0-BTT"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="JuraMedium" family="Jura" pointSize="20"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="89" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="r6E-HX-aG6">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellID" rowHeight="89" id="5Nh-Bg-wRW" customClass="DJTableViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5Nh-Bg-wRW" id="DY8-MD-aWG">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="38U-98-1zy">
+                                                    <rect key="frame" x="85" y="24" width="145" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BPh-1s-rfk">
+                                                    <rect key="frame" x="90" y="52" width="46" height="30"/>
+                                                    <state key="normal" title="Button">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="onVoteButtonPressed:" destination="5Nh-Bg-wRW" eventType="touchUpInside" id="E5M-2e-oqb"/>
+                                                        <segue destination="Af0-nL-frh" kind="presentation" id="UL0-j6-3sc"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="songLabel" destination="38U-98-1zy" id="9Jw-cm-haZ"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
-                                    <action selector="oneButtonOnePressed:" destination="CrE-v1-FpV" eventType="touchUpInside" id="Ef5-MF-59V"/>
+                                    <outlet property="dataSource" destination="CrE-v1-FpV" id="fXg-AS-Q1E"/>
+                                    <outlet property="delegate" destination="CrE-v1-FpV" id="tEu-TB-nuG"/>
                                 </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SKR-rT-kkT">
-                                <rect key="frame" x="200" y="254" width="200" height="30"/>
-                                <color key="backgroundColor" red="0.51764705879999995" green="0.68235294120000001" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="Gh3-pE-uwF"/>
-                                    <constraint firstAttribute="height" constant="30" id="nub-Ef-04U"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="JuraMedium" family="Jura" pointSize="20"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="onButtonTwoPressed:" destination="CrE-v1-FpV" eventType="touchUpInside" id="pcY-K0-DSh"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eSX-M8-pE6">
-                                <rect key="frame" x="200" y="362" width="200" height="30"/>
-                                <color key="backgroundColor" red="0.51764705879999995" green="0.68235294120000001" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="Bxz-0c-uYP"/>
-                                    <constraint firstAttribute="height" constant="30" id="yw8-DS-aNL"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="JuraMedium" family="Jura" pointSize="20"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="onButtonThreePressed:" destination="CrE-v1-FpV" eventType="touchUpInside" id="LsP-Ld-AOr"/>
-                                </connections>
-                            </button>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="centerX" secondItem="SKR-rT-kkT" secondAttribute="centerX" id="2Y7-8A-sdC"/>
-                            <constraint firstAttribute="centerX" secondItem="eSX-M8-pE6" secondAttribute="centerX" id="3aB-32-Gzd"/>
-                            <constraint firstAttribute="centerY" secondItem="SKR-rT-kkT" secondAttribute="centerY" constant="-1" id="B7U-9H-nIO"/>
-                            <constraint firstItem="fUo-DL-uh8" firstAttribute="top" secondItem="8Jf-3V-83K" secondAttribute="bottom" constant="141" id="lAg-6Z-aQZ"/>
-                            <constraint firstItem="eVA-Fw-EeR" firstAttribute="top" secondItem="eSX-M8-pE6" secondAttribute="bottom" constant="144" id="nsN-vI-zRb"/>
-                            <constraint firstAttribute="centerX" secondItem="fUo-DL-uh8" secondAttribute="centerX" id="nzq-LV-sMS"/>
-                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="button1" destination="fUo-DL-uh8" id="xth-Jx-0A0"/>
-                        <outlet property="button2" destination="SKR-rT-kkT" id="c1r-Vp-f9g"/>
-                        <outlet property="button3" destination="eSX-M8-pE6" id="kNt-bv-tOz"/>
-                        <segue destination="Af0-nL-frh" kind="presentation" identifier="DJVoteToThankYou" id="5v2-18-Tfu"/>
+                        <outlet property="tableView" destination="r6E-HX-aG6" id="t32-LS-WMf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xdl-dK-2O1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2765" y="614"/>
+            <point key="canvasLocation" x="2765" y="613"/>
         </scene>
         <!--Thank You View Controller-->
         <scene sceneID="gX5-Io-FJt">
@@ -483,6 +459,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="lau-9U-Lgs"/>
+        <segue reference="UL0-j6-3sc"/>
     </inferredMetricsTieBreakers>
 </document>
