--- a/SilentRevolution/Base.lproj/Main.storyboard
+++ b/SilentRevolution/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="5oV-OI-P7P">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="5oV-OI-P7P">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -402,22 +402,6 @@
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o1K-IS-6eV">
-                                            <rect key="frame" x="8" y="16" width="72" height="40"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="72" id="LpQ-OV-X68"/>
-                                                <constraint firstAttribute="height" constant="40" id="ZYQ-r0-JcV"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" name="JuraMedium" family="Jura" pointSize="23"/>
-                                            <state key="normal" title="Back">
-                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                            </state>
-                                            <connections>
-                                                <action selector="onBackButtonPressed:" destination="Af0-nL-frh" eventType="touchUpInside" id="Jaw-Mv-PTr"/>
-                                                <segue destination="Awi-eH-0BQ" kind="unwind" identifier="ThankYouToMap" unwindAction="unwindToMapVC:" id="SZV-uz-eO0"/>
-                                            </connections>
-                                        </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="omI-Ff-QKy">
                                             <rect key="frame" x="256" y="343" width="89" height="40"/>
                                             <color key="backgroundColor" red="0.51764705879999995" green="0.68235294120000001" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
@@ -432,6 +416,22 @@
                                             </state>
                                             <connections>
                                                 <action selector="onShareButtonPressed:" destination="Af0-nL-frh" eventType="touchUpInside" id="UT1-fK-5pW"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o1K-IS-6eV">
+                                            <rect key="frame" x="8" y="16" width="72" height="40"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="72" id="LpQ-OV-X68"/>
+                                                <constraint firstAttribute="height" constant="40" id="ZYQ-r0-JcV"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="JuraMedium" family="Jura" pointSize="23"/>
+                                            <state key="normal" title="Back">
+                                                <color key="titleColor" red="0.51764705879999995" green="0.68235294120000001" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="onBackButtonPressed:" destination="Af0-nL-frh" eventType="touchUpInside" id="Jaw-Mv-PTr"/>
+                                                <segue destination="Awi-eH-0BQ" kind="unwind" identifier="ThankYouToMap" unwindAction="unwindToMapVC:" id="SZV-uz-eO0"/>
                                             </connections>
                                         </button>
                                     </subviews>
