--- a/SilentRevolution/Base.lproj/Main.storyboard
+++ b/SilentRevolution/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="5oV-OI-P7P">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="5oV-OI-P7P">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -20,9 +20,55 @@
             <string>JuraMedium</string>
             <string>JuraMedium</string>
             <string>JuraMedium</string>
+            <string>JuraMedium</string>
         </mutableArray>
     </customFonts>
     <scenes>
+        <!--Settings View Controller-->
+        <scene sceneID="Ser-FS-2fu">
+            <objects>
+                <viewController id="21X-x9-yTc" customClass="SettingsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bk9-c5-9DA"/>
+                        <viewControllerLayoutGuide type="bottom" id="zSe-Qc-489"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dCQ-cF-0Dl">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jCy-3g-QqZ">
+                                <rect key="frame" x="255" y="248" width="90" height="40"/>
+                                <color key="backgroundColor" red="0.51764705879999995" green="0.68235294120000001" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="GDI-HW-8Jt"/>
+                                    <constraint firstAttribute="width" constant="90" id="JSB-RJ-TBv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="JuraMedium" family="Jura" pointSize="23"/>
+                                <state key="normal" title="Log Off">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onLogOffButtonPressed:" destination="21X-x9-yTc" eventType="touchUpInside" id="Spo-e6-r93"/>
+                                    <segue destination="Qkq-Q0-RFe" kind="unwind" unwindAction="unwindToMapVC:" id="ECB-RC-CJI"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="jCy-3g-QqZ" secondAttribute="centerX" id="VOb-j5-p9M"/>
+                            <constraint firstAttribute="centerY" secondItem="jCy-3g-QqZ" secondAttribute="centerY" id="mxN-iy-br9"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="logOffButton" destination="jCy-3g-QqZ" id="lRa-Qg-cg2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9ka-Zg-Zva" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Qkq-Q0-RFe" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1194" y="-1085"/>
+        </scene>
         <!--Map View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
@@ -112,6 +158,7 @@
                         <outlet property="voteButton" destination="Byl-1W-u98" id="W2w-1q-5F8"/>
                         <segue destination="zVY-lp-YO6" kind="show" identifier="mapToDetails" id="3tn-KW-o6s"/>
                         <segue destination="MPv-lC-2Po" kind="show" identifier="mapToVote" id="NtN-Us-rFN"/>
+                        <segue destination="21X-x9-yTc" kind="show" identifier="mapToSettingsIdentifier" id="Y4H-Qf-fbf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
